# dialog-db

./: .gitignore  Cargo.toml  README.md  dialog-schema.json  flake.nix
rust/dialog-artifacts/: Cargo.toml  Guide.md  README.md
rust/dialog-artifacts/examples/: columnar_footprint.rs
rust/dialog-artifacts/javascript_tests/: bindings.test.ts  package-lock.json  package.json  web-test-runner.config.mjs
rust/dialog-artifacts/src/: artifacts.rs  blob_index.rs  buffered.rs  capability.rs  constants.rs  credentials.rs  data.rs  environment.rs  error.rs  exporter.rs  fx.rs  helpers.rs  history.rs  importer.rs  key.rs  lib.rs  merge.rs  operator.rs  platform.rs  profile.rs  reference.rs  replica.rs  repository.rs  revision.rs  site.rs  spill.rs  state.rs  storage.rs  tree.rs  uri.rs  web.rs
rust/dialog-automerge/: Cargo.toml
rust/dialog-automerge/src/: lib.rs  session.rs  text.rs
rust/dialog-automerge/tests/: convergence.rs  session.rs
rust/dialog-blobs/: Cargo.toml
rust/dialog-blobs/src/: blob_storage.rs  error.rs  lib.rs  provider.rs  vfs.rs
rust/dialog-blobs/tests/: blob_index_spike.rs
rust/dialog-capability/: Cargo.toml  PLAN-claim-projection.md  README.md
rust/dialog-capability-ucan/: Cargo.toml
rust/dialog-capability-ucan/src/: access.rs  builder.rs  claim.rs  delegation.rs  invocation.rs  issuer.rs  lib.rs  parameters.rs  scope.rs
rust/dialog-capability/src/: ability.rs  access.rs  attenuate.rs  attenuation.rs  authority.rs  authorization.rs  authorization_request.rs  authorized.rs  capability.rs  claim.rs  command.rs  constrained.rs  constraint.rs  credential.rs  delegation.rs  effect.rs  error.rs  fork.rs  history.rs  invocation.rs  issuer.rs  lib.rs  policy.rs  provider.rs  revision.rs  router.rs  selector.rs  settings.rs  signature.rs  site.rs  storage.rs  subject.rs  ucan.rs
rust/dialog-common/: Cargo.toml
rust/dialog-common-macros/: Cargo.toml
rust/dialog-common-macros/src/: lib.rs  provider.rs  test.rs
rust/dialog-common/src/: as_bytes.rs  async.rs  buffer.rs  bytes.rs  capability.rs  checksum.rs  effect.rs  fx.rs  hash.rs  helpers.rs  impossible.rs  lib.rs  sync.rs  time.rs  unsent.rs
rust/dialog-common/tests/: conventions.rs
rust/dialog-credentials/: Cargo.toml
rust/dialog-credentials/src/: credential.rs  ed25519.rs  key.rs  lib.rs  profile.rs  webauthn.rs
rust/dialog-credentials/tests/: ucan.rs  webauthn.rs
rust/dialog-csv/: Cargo.toml  README.md
rust/dialog-csv/src/: exporter.rs  importer.rs  lib.rs  row.rs
rust/dialog-dbsp/: Cargo.toml
rust/dialog-dbsp/src/: lib.rs  operator.rs  zset.rs
rust/dialog-diagnose/: Cargo.toml  DESIGN.md  IMPLEMENTATION.md  pokemon_artifacts.csv
rust/dialog-diagnose/src/: cli.rs  lib.rs  promise.rs  state.rs  widgets.rs
rust/dialog-effects/: Cargo.toml  README.md
rust/dialog-effects/src/: access.rs  archive.rs  authority.rs  blob.rs  credential.rs  environment.rs  lib.rs  memory.rs  remote.rs  repository.rs  space.rs  storage.rs
rust/dialog-encoding/: Cargo.toml
rust/dialog-encoding/src/: buf.rs  buffer.rs  cellular.rs  codec.rs  columnar.rs  error.rs  lib.rs  width.rs
rust/dialog-inspector/: Cargo.toml  Trunk.toml  build-extension.sh  index.html  styles.css
rust/dialog-inspector/assets/: service_worker.js  sw-plugin.js
rust/dialog-inspector/extension/: content_loader.js  devtools.html  devtools.js  manifest.json
rust/dialog-inspector/src/: bridge.rs  discovery.rs  dispatch.rs  handler.rs  inspect.rs  lib.rs
rust/dialog-iroh-remote/: Cargo.toml
rust/dialog-iroh-remote/src/: iroh.rs  lib.rs
rust/dialog-iroh-remote/tests/: device_to_device.rs  e2e.rs
rust/dialog-macros/: Cargo.toml
rust/dialog-macros/src/: attenuate.rs  claim.rs  compose.rs  effect.rs  effectful.rs  lib.rs  provider.rs  query.rs  router.rs  site.rs  test.rs
rust/dialog-network/: Cargo.toml
rust/dialog-network/src/: lib.rs
rust/dialog-nlp/: Cargo.toml
rust/dialog-nlp/notes/: design.md  dialog-query-integration.md
rust/dialog-nlp/src/: effect.rs  error.rs  input.rs  lib.rs  noun.rs  parse.rs  role.rs  score.rs  segment.rs  sentence.rs  token.rs  verb.rs
rust/dialog-operator/: Cargo.toml  README.md
rust/dialog-operator/src/: authority.rs  helpers.rs  lib.rs  network.rs  operator.rs  profile.rs  remote.rs  site.rs  storage.rs
rust/dialog-prolly-tree/: Cargo.toml  README.md
rust/dialog-prolly-tree/benches/: delete.rs  get.rs  insert.rs  range_query.rs
rust/dialog-prolly-tree/src/: adopter.rs  block.rs  differential.rs  distribution.rs  entry.rs  error.rs  helpers.rs  key.rs  lib.rs  node.rs  reference.rs  tree.rs
rust/dialog-prolly-tree/tests/: backend.rs  range.rs  tree.rs
rust/dialog-prose/: Cargo.toml
rust/dialog-prose/src/: ast.rs  error.rs  lib.rs  parser.rs  tokenizer.rs
rust/dialog-query/: Cargo.toml  MODULE_STRUCTURE.md  README.md  debug_test.rs  guide.md  test_curly_macro  test_curly_macro.rs  test_dotted_namespace.rs  test_dotted_v2  test_dotted_v2.rs  test_flexible_order  test_flexible_order.rs  test_macro_parsing  test_macro_parsing.rs  test_simple_select.rs
rust/dialog-query-macros/: Cargo.toml
rust/dialog-query-macros/src/: lib.rs
rust/dialog-query-macros/tests/: formula_generation_test.rs
rust/dialog-query/benches/: README.md  query_disk.rs  query_join.rs  query_memory.rs  query_reads.rs
rust/dialog-query/examples/: api_sketch.rs  attribute_approaches_analysis.rs  builder_api_demo.rs  concept_serialization.rs  constraint_demo.rs  macro_sketch.rs  mod_macro.rs  new_variable_api.rs  profile_join.rs  profile_replay.rs  recommended_implementation.rs  relation_attribute.rs  rule_expansion.rs  select_macro_demo.rs  term_constraints.rs  test_inference.rs  test_macro_fix.rs  test_tagged_types.rs  test_untagged.rs  type_constraints.rs  (+5 more)
rust/dialog-remote/: .gitignore  Cargo.toml  README.md  wrangler.deploy.toml  wrangler.toml
rust/dialog-remote-fs/: Cargo.toml
rust/dialog-remote-s3/: Cargo.toml  README.md
rust/dialog-remote-ucan-s3/: Cargo.toml  README.md
rust/dialog-repository/: Cargo.toml  Guide.md  README.md
rust/dialog-s3-credentials/: Cargo.toml
(+1299 files in other folders)
