[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

[profile.wasm-release]
opt-level = "s"
debug = 0
inherits = "release"
strip = "debuginfo"

[workspace]
members = [
    "rust/dialog-artifacts",
    "rust/dialog-capability",
    "rust/dialog-common",
    "rust/dialog-effects",
    "rust/dialog-macros",
    "rust/dialog-diagnose",
    "rust/dialog-dbsp",
    "rust/dialog-encoding",
    "rust/dialog-prolly-tree",
    "rust/dialog-storage",
    "rust/dialog-s3-credentials",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["The Meiosys Project Authors"]
license = "MPL-2.0"

[workspace.dependencies]
anyhow = "1"
arrayref = "0.3"
async-stream = "0.3"
async-trait = "0.1"
base58 = "0.2"
base64 = "0.22"
blake3 = "1"
brotli = "8"
clap = "4"
clap_derive = "4"
console_error_panic_hook = "0.1"
convert_case = "0.6"
csv-async = { version = "1", features = ["tokio"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures-core = "0.3"
futures-util = "0.3"
ipld-core = { version = "0.4", features = ["serde"] }
# getrandom = "0.3"
getrandom = "0.2"
itertools = "0.14"
js-sys = "0.3"
leb128 = "0.2"
leptos = "0.8"
leptos_meta = "0.8"
leptos_router = "0.8"
nonempty = "0.11"
ptree = "0.5"
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.3"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
rexie = "0.6"
rkyv = "0.8"
serde = "1"
serde-big-array = "0.5"
serde_bytes = "0.11"
serde_ipld_dagcbor = "0.6"
serde_json = "1"
sieve-cache = "1"
static_assertions = "1"
tempfile = "3"
thiserror = "2"
throbber-widgets-tui = "0.8"
tokio = "1"
ucan = { git = "https://github.com/tonk-labs/rs-ucan.git", branch = "main", package = "ucan" }
varsig = { git = "https://github.com/tonk-labs/rs-ucan.git", branch = "main", package = "varsig" }
ulid = "1"
url = { version = "2", features = ["serde"] }
wasm-bindgen = "=0.2.108"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = "0.3"
web-time = "1"
zerocopy = "0.8"

[workspace.dependencies.dialog-artifacts]
path = "./rust/dialog-artifacts"

[workspace.dependencies.dialog-capability]
path = "./rust/dialog-capability"

[workspace.dependencies.dialog-common]
path = "./rust/dialog-common"

[workspace.dependencies.dialog-encoding]
path = "./rust/dialog-encoding"

[workspace.dependencies.dialog-prolly-tree]
path = "./rust/dialog-prolly-tree"

[workspace.dependencies.dialog-storage]
path = "./rust/dialog-storage"

[workspace.dependencies.dialog-effects]
path = "./rust/dialog-effects"

[workspace.dependencies.dialog-macros]
path = "./rust/dialog-macros"

[workspace.dependencies.dialog-s3-credentials]
path = "./rust/dialog-s3-credentials"

# [patch.crates-io]
# # TODO: https://github.com/gwierzchowski/csv-async/issues/27
# csv-async = { git = "https://github.com/cdata/csv-async.git" }
