[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

[profile.wasm-release]
opt-level = "s"
debug = 0
inherits = "release"
strip = "debuginfo"

[workspace]
members = [
    "rust/dialog-artifacts",
    "rust/dialog-capability",
    "rust/dialog-credentials",
    "rust/dialog-common",
    "rust/dialog-effects",
    "rust/dialog-macros",
    "rust/dialog-diagnose",
    "rust/dialog-dbsp",
    "rust/dialog-encoding",
    "rust/dialog-prolly-tree",
    "rust/dialog-storage",
    "rust/dialog-ucan",
    "rust/dialog-varsig",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["The Meiosys Project Authors"]
license = "MPL-2.0"

[workspace.dependencies]
anyhow = "1"
arbitrary = { version = "1", features = ["derive"] }
arrayref = "0.3"
async-stream = "0.3"
async-trait = "0.1"
base58 = "0.2"
base64 = "0.22"
blake3 = "1"
brotli = "8"
clap = "4"
clap_derive = "4"
console_error_panic_hook = "0.1"
convert_case = "0.6"
csv-async = { version = "1", features = ["tokio"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
ipld-core = { version = "0.4", features = ["serde"] }
# getrandom = "0.3"
getrandom = "0.2"
getrandom_04 = { package = "getrandom", version = "0.4" }
itertools = "0.14"
js-sys = "0.3"
k256 = "0.13"
leb128 = "0.2"
leptos = "0.8"
leptos_meta = "0.8"
leptos_router = "0.8"
nom = "7"
nom-unicode = "0.3"
nonempty = "0.11"
p256 = "0.13"
p384 = "0.13"
p521 = "0.13"
pretty_assertions = "1"
proptest = "1"
proptest-arbitrary-interop = "0.1"
ptree = "0.5"
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.3"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
rexie = "0.6"
rkyv = "0.8"
rsa = "0.9"
serde = "1"
serde-value = "0.7"
serde-big-array = "0.5"
serde_bytes = "0.11"
serde_ipld_dagcbor = "0.6"
serde_ipld_dagjson = "0.2"
serde_json = "1"
sha2 = "0.10"
sieve-cache = "1"
static_assertions = "1"
tempfile = "3"
test-log = "0.2"
testresult = "0.4"
thiserror = "2"
throbber-widgets-tui = "0.8"
tokio = "1"
tracing = "0.1"
signature = "2.2"
dialog-ucan = { path = "./rust/dialog-ucan" }
dialog-varsig = { path = "./rust/dialog-varsig" }
ulid = "1"
url = "2"
wasm-bindgen = "=0.2.108"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = "0.3"
web-time = "1"
zerocopy = "0.8"

[workspace.dependencies.dialog-artifacts]
path = "./rust/dialog-artifacts"

[workspace.dependencies.dialog-capability]
path = "./rust/dialog-capability"

[workspace.dependencies.dialog-common]
path = "./rust/dialog-common"

[workspace.dependencies.dialog-credentials]
path = "./rust/dialog-credentials"

[workspace.dependencies.dialog-encoding]
path = "./rust/dialog-encoding"

[workspace.dependencies.dialog-prolly-tree]
path = "./rust/dialog-prolly-tree"

[workspace.dependencies.dialog-storage]
path = "./rust/dialog-storage"

[workspace.dependencies.dialog-effects]
path = "./rust/dialog-effects"

[workspace.dependencies.dialog-macros]
path = "./rust/dialog-macros"

# [patch.crates-io]
# # TODO: https://github.com/gwierzchowski/csv-async/issues/27
# csv-async = { git = "https://github.com/cdata/csv-async.git" }
