[package]
name = "dialog-artifacts"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["csv"]
debug = []
helpers = ["dep:anyhow"]
csv = ["dep:csv-async"]

[dependencies]
dialog-common = { workspace = true }
dialog-storage = { workspace = true }
dialog-prolly-tree = { workspace = true }

anyhow = { workspace = true, optional = true }
arrayref = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
base58 = { workspace = true }
blake3 = { workspace = true }
csv-async = { workspace = true, optional = true, features = ["tokio"] }
ed25519-dalek = { workspace = true }
futures-util = { workspace = true }
leb128 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
serde-big-array = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "io-util"] }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
dialog-storage = { workspace = true, features = ["helpers"] }
anyhow = { workspace = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
# getrandom = { workspace = true, features = ["wasm_js"] }
getrandom = { workspace = true, features = ["js"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
