[package]
name = "dialog-artifacts"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["csv", "s3", "ucan"]
debug = []
helpers = ["dep:anyhow"]
csv = ["dep:csv-async"]
# Enable integration tests (tests with service provisioning)
integration-tests = ["dialog-common/integration-tests"]
# Enable web integration tests
web-integration-tests = ["dialog-common/web-integration-tests"]
s3 = ["dep:dialog-remote-s3"]
ucan = ["s3", "dep:dialog-remote-ucan-s3", "dep:dialog-ucan", "dialog-capability/ucan"]

[dependencies]
dialog-capability = { workspace = true }
dialog-common = { workspace = true }
dialog-credentials = { workspace = true }
dialog-effects = { workspace = true }
dialog-ucan = { workspace = true, optional = true }
dialog-remote-s3 = { workspace = true, optional = true }
dialog-remote-ucan-s3 = { workspace = true, optional = true }
dialog-storage = { workspace = true }
dialog-prolly-tree = { workspace = true }
parking_lot = { workspace = true }
dialog-varsig = { workspace = true }

anyhow = { workspace = true, optional = true }
arrayref = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
base58 = { workspace = true }
blake3 = { workspace = true }
csv-async = { workspace = true, optional = true, features = ["tokio"] }
ed25519-dalek = { workspace = true }
futures-util = { workspace = true }
leb128 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
signature = { workspace = true }
serde-big-array = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
serde_json = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "io-util"] }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
dialog-storage = { workspace = true, features = ["helpers"] }
dialog-remote-s3 = { workspace = true, features = ["helpers"] }
dialog-remote-ucan-s3 = { workspace = true, features = ["helpers"] }
dialog-common = { workspace = true, features = ["helpers"] }
anyhow = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "io-util", "fs"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
# getrandom = { workspace = true, features = ["wasm_js"] }
getrandom = { workspace = true, features = ["js"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
reqwest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "io-util",
    "io-std",
    "sync",
    "macros",
    "rt",
    "rt-multi-thread",
] }

[lints.rust]
# This cfg is used by the dialog_common::test proc macro for wasm inner tests
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(dialog_test_wasm_integration)"] }
