[package]
name = "dialog-capability"
description = "Capability-based authorization primitives"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("web-integration-tests"))',
    'cfg(dialog_test_wasm_integration)',
] }

[features]
default = []
# UCAN support (IPLD serialization for capabilities)
ucan = ["dep:ipld-core", "dep:dialog-ucan"]

[dependencies]
convert_case = { workspace = true }
dialog-common = { workspace = true }
dialog-macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
signature = { workspace = true }
dialog-varsig = { workspace = true }
ipld-core = { workspace = true, optional = true }
dialog-ucan = { workspace = true, optional = true }

[dev-dependencies]
dialog-common = { workspace = true, features = ["helpers"] }
wasm-bindgen-test = { workspace = true }
