[package]
name = "dialog-capability"
description = "Capability-based authorization primitives"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("web-integration-tests"))',
    'cfg(dialog_test_wasm_integration)',
] }

[dependencies]
convert_case = { workspace = true }
dialog-common = { workspace = true }
dialog-macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
signature = { workspace = true }
dialog-varsig = { workspace = true }
url = { workspace = true }


[dev-dependencies]
dialog-common = { workspace = true, features = ["helpers"] }
dialog-credentials = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
wasm-bindgen-test = { workspace = true }
