[package]
name = "dialog-common"
description = "Shared, stand-alone helpers"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
# Testing utilities (Provision, Provider traits, EnvGuard)
helpers = ["dep:anyhow", "dep:serde_json", "dep:dialog-macros"]
# Enable integration tests (tests with service provisioning)
integration-tests = ["helpers"]
# Enable web integration tests (implies integration-tests behavior)
web-integration-tests = ["helpers"]
# UCAN support (IPLD serialization for capabilities)
ucan = ["dep:ipld-core", "dep:ucan"]

[dependencies]
blake3 = { workspace = true }
anyhow = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
dialog-macros = { workspace = true, optional = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
ipld-core = { workspace = true, optional = true }
ucan = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt", "sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["sync"] }
wasm-bindgen-futures = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
web-sys = { workspace = true, features = ["console"] }

[dev-dependencies]
dialog-macros = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-test = { workspace = true }

[lints.rust]
# This cfg is used by the dialog_common::test proc macro for wasm inner tests
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(dialog_test_wasm_integration)"] }
