[package]
name = "dialog-common"
description = "Shared, stand-alone helpers"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
# Testing utilities (Provision, Provider traits, EnvGuard)
helpers = ["dep:anyhow", "dep:serde_json", "dep:dialog-macros", "dep:async-trait", "dep:rand"]
# Enable integration tests (tests with service provisioning)
integration-tests = ["helpers"]
# Enable web integration tests (implies integration-tests behavior)
web-integration-tests = ["helpers"]

[dependencies]
base58 = { workspace = true }
blake3 = { workspace = true }
futures-util = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
web-time = { workspace = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }

anyhow = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
dialog-macros = { workspace = true, optional = true }
rand = { workspace = true, features = ["min_const_gen"], optional = true }
serde_json = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt", "sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }
tokio = { workspace = true, features = ["sync"] }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["console"] }

[dev-dependencies]
dialog-macros = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-test = { workspace = true }

[lints.rust]
# This cfg is used by the dialog_common::test proc macro for wasm inner tests
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(dialog_test_wasm_integration)"] }
