[package]
name = "dialog-diagnose"
description = "Debugging tools for Dialog databases"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
csv = "1.3"
dialog-artifacts = { workspace = true, features = ["csv", "debug"] }
dialog-prolly-tree = { workspace = true }
dialog-storage = { workspace = true }
futures-util = "0.3"
hex = "0.4"
ratatui = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "sync",
    "io-util",
    "rt-multi-thread",
] }
