[package]
name = "dialog-diagnose"
description = "Debugging tools for Dialog databases"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true

[features]
# Enable integration tests (tests with service provisioning)
integration-tests = ["dialog-artifacts/integration-tests"]
# Enable web integration tests
web-integration-tests = ["dialog-artifacts/web-integration-tests"]

[dependencies]
anyhow = { workspace = true }
base58 = { workspace = true }
dialog-artifacts = { workspace = true, features = ["csv", "debug"] }
dialog-prolly-tree = { workspace = true }
dialog-storage = { workspace = true }
futures-util = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { workspace = true, features = ["derive"] }
ratatui = { workspace = true }
throbber-widgets-tui = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "sync",
    "io-util",
    "rt-multi-thread",
] }

[lints.rust]
# This cfg is used by the dialog_common::test proc macro for wasm inner tests
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(dialog_test_wasm_integration)"] }
